--- a/src/Luciana/CustomerRegistrationAutomationChallenge.xaml
+++ b/src/Luciana/CustomerRegistrationAutomationChallenge.xaml
@@ -64,7 +64,6 @@
       <AssemblyReference>UiPath.UIAutomationCore</AssemblyReference>
       <AssemblyReference>UiPath.UIAutomationNext</AssemblyReference>
       <AssemblyReference>UiPath.System.Activities.Design</AssemblyReference>
-      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
   <Sequence DisplayName="CustomerRegistrationAutomationChallenge" sap:VirtualizedContainerService.HintSize="556.8,1018.4" sap2010:WorkflowViewState.IdRef="Sequence_1">
@@ -76,7 +75,7 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:ReadRange Range="{x:Null}" AddHeaders="True" DataTable="[customersDT]" DisplayName="Read Range" sap:VirtualizedContainerService.HintSize="515.2,88" sap2010:WorkflowViewState.IdRef="ReadRange_1" SheetName="Sheet1" WorkbookPath="Week 7\homework\challenge.xlsx" />
+    <ui:ReadRange Range="{x:Null}" AddHeaders="True" DataTable="[customersDT]" DisplayName="Read Range" sap:VirtualizedContainerService.HintSize="515.2,88" sap2010:WorkflowViewState.IdRef="ReadRange_1" SheetName="Sheet1" WorkbookPath="Luciana\challenge.xlsx" />
     <ui:OpenBrowser CommunicationMethod="{x:Null}" Hidden="{x:Null}" NewSession="{x:Null}" Private="{x:Null}" UiBrowser="{x:Null}" BrowserType="Firefox" DisplayName="Open Browser" sap:VirtualizedContainerService.HintSize="515.2,697.6" sap2010:WorkflowViewState.IdRef="OpenBrowser_1" Url="[”http://www.rpachallenge.com/”]">
       <ui:OpenBrowser.Body>
         <ActivityAction x:TypeArguments="x:Object">
